data/csswhat/oui.css
/* ... */
    
    .button[disabled].button--plain,
    .button[disabled].button--toggle,
    .button[disabled].oui-button--plain,
    .button[disabled].oui-button--toggle,
    .button--disabled.button--plain,
    .button--disabled.button--toggle,
    .button--disabled.oui-button--plain,
    .button--disabled.oui-button--toggle,
    .button--disabled:visited.button--plain,
    .button--disabled:visited.button--toggle,
    .button--disabled:visited.oui-button--plain,
    .button--disabled:visited.oui-button--toggle,
    .button--disabled:hover.button--plain,
    .button--disabled:hover.button--toggle,
    .button--disabled:hover.oui-button--plain,
    .button--disabled:hover.oui-button--toggle,
    .button--disabled:active.button--plain,
    .button--disabled:active.button--toggle,
    .button--disabled:active.oui-button--plain,
    .button--disabled:active.oui-button--toggle,
    .button--disabled:focus.button--plain,
    .button--disabled:focus.button--toggle,
    .button--disabled:focus.oui-button--plain,
    .button--disabled:focus.oui-button--toggle,
    .toolbar__button[disabled].button--plain,
    .toolbar__button[disabled].button--toggle,
    .toolbar__button[disabled].oui-button--plain,
    .toolbar__button[disabled].oui-button--toggle,
    .oui-button[disabled].button--plain,
    .oui-button[disabled].button--toggle,
    .oui-button[disabled].oui-button--plain,
    .oui-button[disabled].oui-button--toggle,
    .oui-button--disabled.button--plain,
    .oui-button--disabled.button--toggle,
    .oui-button--disabled.oui-button--plain,
    .oui-button--disabled.oui-button--toggle,
    .oui-button--disabled:visited.button--plain,
    .oui-button--disabled:visited.button--toggle,
    .oui-button--disabled:visited.oui-button--plain,
    .oui-button--disabled:visited.oui-button--toggle,
    .oui-button--disabled:hover.button--plain,
    .oui-button--disabled:hover.button--toggle,
    .oui-button--disabled:hover.oui-button--plain,
    .oui-button--disabled:hover.oui-button--toggle,
    .oui-button--disabled:active.button--plain,
    .oui-button--disabled:active.button--toggle,
    .oui-button--disabled:active.oui-button--plain,
    .oui-button--disabled:active.oui-button--toggle,
    .oui-button--disabled:focus.button--plain,
    .oui-button--disabled:focus.button--toggle,
    .oui-button--disabled:focus.oui-button--plain,
    .oui-button--disabled:focus.oui-button--toggle {
      background-color: transparent;
      border-color: transparent; }
    
    .button[disabled].button--outline-reverse,
    .button[disabled].oui-button--outline-reverse,
    .button--disabled.button--outline-reverse,
    .button--disabled.oui-button--outline-reverse,
    .button--disabled:visited.button--outline-reverse,
    .button--disabled:visited.oui-button--outline-reverse,
    .button--disabled:hover.button--outline-reverse,
    .button--disabled:hover.oui-button--outline-reverse,
    .button--disabled:active.button--outline-reverse,
    .button--disabled:active.oui-button--outline-reverse,
    .button--disabled:focus.button--outline-reverse,
    .button--disabled:focus.oui-button--outline-reverse,
    .toolbar__button[disabled].button--outline-reverse,
    .toolbar__button[disabled].oui-button--outline-reverse,
    .oui-button[disabled].button--outline-reverse,
    .oui-button[disabled].oui-button--outline-reverse,
    .oui-button--disabled.button--outline-reverse,
    .oui-button--disabled.oui-button--outline-reverse,
    .oui-button--disabled:visited.button--outline-reverse,
    .oui-button--disabled:visited.oui-button--outline-reverse,
    .oui-button--disabled:hover.button--outline-reverse,
    .oui-button--disabled:hover.oui-button--outline-reverse,
    .oui-button--disabled:active.button--outline-reverse,
    .oui-button--disabled:active.oui-button--outline-reverse,
    .oui-button--disabled:focus.button--outline-reverse,
    .oui-button--disabled:focus.oui-button--outline-reverse {
      background-color: transparent; }
  
  .button--loading .oui-spinner,
  .oui-button--loading .oui-spinner {
    margin-bottom: -5px;
    margin-right: 5px; }

code {
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 13px; }

.pre,
.oui-pre {
  margin-bottom: 10px;
  white-space: pre-wrap; }
  .pre code,
  .oui-pre code {
    padding: 10px;
    background: #FFFFFF;
    overflow-x: auto;
    display: block;
    border-radius: 5px;
    border: 1px solid #e0e0e0; }

.code,
.oui-code {
  background: #FFFFFF;
  border-radius: 5px;
  border: 1px solid #e0e0e0;
  padding: 1px 3px; }

@font-face {
  font-family: 'Graphik';
  font-weight: 300;
  src: url("https://dhm5hy2vn8l0l.cloudfront.net/graphik/graphik-light.woff2") format("woff2"); }

@font-face {
  font-family: 'Graphik';
  font-weight: 300;
  font-style: italic;
  src: url("https://dhm5hy2vn8l0l.cloudfront.net/graphik/graphik-lightitalic.woff2") format("woff2"); }

@font-face {
  font-family: 'Graphik';
  font-weight: 400;
  src: url("https://dhm5hy2vn8l0l.cloudfront.net/graphik/graphik-regular.woff2") format("woff2"); }

@font-face {
  font-family: 'Graphik';
  font-weight: 400;
  font-style: italic;
  src: url("https://dhm5hy2vn8l0l.cloudfront.net/graphik/graphik-regularitalic.woff2") format("woff2"); }

@font-face {
  font-family: 'Graphik';
  font-weight: 500;
  src: url("https://dhm5hy2vn8l0l.cloudfront.net/graphik/graphik-medium.woff2") format("woff2"); }

@font-face {
  font-family: 'Graphik';
  font-weight: 500;
  font-style: italic;
  src: url("https://dhm5hy2vn8l0l.cloudfront.net/graphik/graphik-mediumitalic.woff2") format("woff2"); }

@font-face {
  font-family: 'Graphik';
  font-weight: 600;
  src: url("https://dhm5hy2vn8l0l.cloudfront.net/graphik/graphik-semibold.woff2") format("woff2"); }

@font-face {
  font-family: 'Graphik';
  font-weight: 600;
  font-style: italic;
  src: url("https://dhm5hy2vn8l0l.cloudfront.net/graphik/graphik-semibolditalic.woff2") format("woff2"); }
/* ... */

